Update package json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "semesterprojekt",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "canvas_server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "p5": "^1.0.0",
     "socket.io": "^2.3.0"
   }
 }
